internal/provider/testdata/valid-legacy-files/guide.html.markdown
---
subcategory: "Example"
layout: "example"
page_title: "Example Guide"
description: |-
  Example description.
---

# Example Guide

Example contents.
