internal/provider/testdata/invalid-legacy-files/guide_with_sidebar_current.html.markdown
---
subcategory: "Example"
sidebar_current: "example"
layout: "example"
page_title: "Example Guide"
description: |-
  Example description.
---

# Example Guide

Example contents.
